# chime

./: .bazelrc  .gitignore  BUILD.bazel  Cargo.toml  MODULE.bazel  README.md  go.mod  go.sum  state.db
.docker/: docker-compose.yml
api/: Cargo.toml
api/migrations/2026-01-04-115636-0000_create_events/: down.sql  up.sql
api/src/store/: enums.rs  models.rs  schema.rs
app/: package.json  pnpm-lock.yaml
app/src/: app.d.ts  app.html  auth.ts
app/src/lib/components/: Modal.svelte  NavBar.svelte  NewEventModal.svelte  SideBar.svelte
app/src/routes/: +layout.server.ts  +page.svelte  layout.css
backend/: chime.db  go.mod  go.sum
backend/cmd/server/: main.go
backend/internal/bot/: main.go
backend/internal/bot/commands/: events.go  main.go
backend/internal/bot/handlers/: events.go
backend/internal/repository/: main.go
backend/internal/server/: main.go
bot/: .env.example  .gitignore  package.json  pnpm-lock.yaml  tsconfig.json
bot/src/: main.ts
bot/src/commands/: command.ts  timestamp.ts
bot/src/hooks/: events.ts  server.ts
bot/src/utils/: config.ts
cmd/server/: main.go
frontend/: pnpm-lock.yaml
internal/database/: event.go  models.go
internal/repository/: event.go  main.go  models.go
migrations/2025-12-03-204136-0000_initial_create/: down.sql  up.sql
proto/: events.proto
src/: main.rs
src/cmd/: events.rs  mod.rs
src/store/: mod.rs  models.rs  repository.rs  schema.rs
