platform(
    name = "linux-amd64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
)

platform(
    name = "linux-arm64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:arm",
    ],
)

platform(
    name = "macos-arm64",
    constraint_values = [
        "@platforms//os:darwin",
        "@platforms//cpu:arm",
    ],
)
