[package]
name = "chime"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["env", "derive"] }
diesel = { version = "2.3.4", features = ["chrono", "serde_json", "sqlite"] }
diesel-async = { version = "0.7.4", features = ["sqlite"] }
libsqlite3-sys = { version = "0.35.0", features = ["bundled"] }
tokio = { version = "1.48.0", features = ["full"] }
tracing = { version = "0.1.43", default-features = false }
tracing-subscriber = { version = "0.3.22", features = ["json", "env-filter"] }
