[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
axum-server = { version = "0.7.3", features = ["tls-rustls"] }
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.53", features = ["env", "derive"] }
diesel = { version = "2.3.5", features = ["chrono", "uuid", "postgres"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.7", features = ["trace"] }
tracing = { version = "0.1.41", default-features = false }
tracing-subscriber = { version = "0.3.20", features = ["json", "env-filter"] }
uuid = { version = "1.19.0", features = ["v4"] }
